Fixed issue where #gallery images were not centered on mobile view

--- a/master.css
+++ b/master.css
@@ -447,6 +447,7 @@ h1 {
       padding-top: 20px;
       width: 90%;
       height: 90%;
+      display: block;
       margin: 0 auto !important;
     }
 
